[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/stage_father_boss.gd" type="Script" id=1]
[ext_resource path="res://stage_father.tscn" type="PackedScene" id=2]
[ext_resource path="res://enemy_boss.tscn" type="PackedScene" id=4]
[ext_resource path="res://asset/GUI/combo/combo.1.png" type="Texture" id=5]
[ext_resource path="res://asset/stage4/boss/specchio_intero.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3.29407, 8.79555 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.78081, 11.065 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4.37117, 7.37791 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 74.358, 28.4894 )
b = Vector2( 524.1, 26.9003 )

[sub_resource type="SegmentShape2D" id=5]
a = Vector2( 123, 10 )
b = Vector2( 400, 10 )

[sub_resource type="SegmentShape2D" id=6]
a = Vector2( 131.918, 21.1581 )
b = Vector2( 26.204, 124.04 )

[sub_resource type="SegmentShape2D" id=7]
b = Vector2( 103.233, 104.738 )

[node name="stage" instance=ExtResource( 2 )]
script = ExtResource( 1 )

[node name="ColorRect" parent="." index="0"]
margin_left = -267.0
margin_top = -153.0
margin_right = 810.0
margin_bottom = 402.0

[node name="env" type="Node2D" parent="." index="2"]

[node name="bg" type="Sprite" parent="env" index="0"]
position = Vector2( 0, 47 )
centered = false

[node name="token" type="Sprite" parent="env/bg" index="0"]
position = Vector2( 242, 20 )
texture = ExtResource( 5 )
centered = false

[node name="specchio" type="Sprite" parent="env/bg" index="1"]
position = Vector2( 258, 36 )
texture = ExtResource( 6 )

[node name="p00" type="Position2D" parent="env" index="1"]
position = Vector2( 360, 159 )

[node name="Area2D" type="Area2D" parent="env/p00" index="0"]
collision_layer = 0

[node name="c" type="CollisionShape2D" parent="env/p00/Area2D" index="0"]
position = Vector2( -0.16687, 8.16685 )
shape = SubResource( 1 )

[node name="p01" type="Position2D" parent="env" index="2"]
position = Vector2( 221, 185 )

[node name="Area2D" type="Area2D" parent="env/p01" index="0"]
collision_layer = 2147483648

[node name="c" type="CollisionShape2D" parent="env/p01/Area2D" index="0"]
position = Vector2( 0.235977, 8 )
shape = SubResource( 2 )

[node name="p02" type="Position2D" parent="env" index="3"]
position = Vector2( 176, 132 )

[node name="Area2D" type="Area2D" parent="env/p02" index="0"]
position = Vector2( 0, 4 )
collision_layer = 0

[node name="c" type="CollisionShape2D" parent="env/p02/Area2D" index="0"]
position = Vector2( 0.374573, 3.76403 )
shape = SubResource( 3 )

[node name="player_final_pos" type="Position2D" parent="env" index="4"]
position = Vector2( 422, 130 )

[node name="spawn_player" parent="YSort" index="0"]
position = Vector2( 125, 156 )

[node name="spawn_player_stage" type="Position2D" parent="YSort" index="2"]
position = Vector2( 96, 148 )

[node name="boss" parent="YSort" index="3" instance=ExtResource( 4 )]
position = Vector2( 298, 146 )

[node name="boss_final_position" type="Position2D" parent="YSort" index="4"]
position = Vector2( 294, 105 )

[node name="bgm" parent="." index="4"]
volume_db = -10.0

[node name="bottom" type="CollisionShape2D" parent="edges" index="0"]
position = Vector2( -40, 182 )
shape = SubResource( 4 )

[node name="top" type="CollisionShape2D" parent="edges" index="1"]
position = Vector2( 0, 112 )
shape = SubResource( 5 )

[node name="left" type="CollisionShape2D" parent="edges" index="2"]
position = Vector2( 9, 94 )
shape = SubResource( 6 )

[node name="right" type="CollisionShape2D" parent="edges" index="3"]
position = Vector2( 376, 116 )
shape = SubResource( 7 )

[node name="p_exit_stage" type="Position2D" parent="." index="12"]
position = Vector2( 563.302, 145.244 )

[node name="Camera2D" type="Camera2D" parent="." index="13"]
anchor_mode = 0

[node name="Tween" type="Tween" parent="." index="14"]
[connection signal="body_entered" from="env/p00/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="env/p01/Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="env/p02/Area2D" to="." method="_on_Area2D_body_entered"]
